--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="profile">
 			<img src="profile.jpg">
 			<h2>@1di4r</h2>
-			<div><h3>IOS Developer</h3></div>
+			<div><h3>IOS & Web Developer</h3></div>
 			<p><span class="typed-text"></span><span class="cursor typing">_</span></p>
 		</div>
 		<div class="contact">
@@ -27,7 +27,7 @@
 			</div>
 		</div>
 		<br>
-		<div class="projects">
+		<!-- <div class="projects">
 			<h1>Projects</h1>
 			<div class="box">
 				<img src="img/youup.jpeg" alt="youup">
@@ -57,9 +57,9 @@
 				</div>
 			</div>
 		</div>
-		
+		 -->
 	</div>
 	<br>
-	<footer><p>17Yh4XAngxXR4kc2LzKWEA48EibhCGonRN</p></footer>
+	<!-- <footer><p>17Yh4XAngxXR4kc2LzKWEA48EibhCGonRN</p></footer> -->
 </body>
 </html>
