--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
 		 -->
 	</div>
 	<br>
-	<!-- <footer><p>17Yh4XAngxXR4kc2LzKWEA48EibhCGonRN</p></footer> -->
+	 <footer><p>17Yh4XAngxXR4kc2LzKWEA48EibhCGonRN</p></footer>
 </body>
 </html>
